--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix" : "/",
-    "token" :  "NzI3NTYxMTYxOTMwNzAyOTcw.XvtoLA.Xfu0NDBKOFk3GiaSH6NK83B3GQs"
+    "token" :  "NzI3NTYxMTYxOTMwNzAyOTcw.XvtvXw.v5_Vf-G9KQsb_-UAckrbvdNwVMc"
 }
