--- a/config2.json
+++ b/config2.json
@@ -1,4 +1,4 @@
 {
     "prefix" : "/",
-    "token" :  "NzI3NTYxMTYxOTMwNzAyOTcw.XvtvXw.v5_Vf-G9KQsb_-UAckrbvdNwVMc"
+    "token" :  "NzI3NjA0MTExMjE3OTE4MDEz.XvuQug.6H4_7pk-aaIPcU5iu0VNRwC62fs"
 }
