--- a/config2.json
+++ b/config2.json
@@ -1,4 +1,4 @@
 {
     "prefix" : "/",
-    "Token" :  "NzI3NjA0MTExMjE3OTE4MDEz.XvuQug.6H4_7pk-aaIPcU5iu0VNRwC62fs"
+    "Token" :  "NzI3NjE2Njc2OTIwNTU3Njkw.Xvub3A.L66YDHhmzfDcr1PhACLC00zJSDM"
 }
